# YourDroid

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.Debug  Makefile.Release  README.md  YOURDR~1.USE  YOURDR~3.USE  android_list.ini  cmd.cpp  cmd.h  config.ini  console.cpp  console.h  data.cpp  data.h  data.rar  deploy.sh  download.cpp  download.h  downloader.cpp  downloader.h  enum.h  exception.cpp  exception.h  global.cpp  global.h  info.rc  install.cpp  install.h  installdata.cpp  installdata.h  log.cpp  log.h  log.sh  main.cpp  main.cpp.autosave  mainclass.cpp  mainclass.h  (+31 more)
binary/: log.txt
binary/data/bootloaders/gummi/loader/entries/: 1installed.conf  4windows.conf
bkisofs/: bk.h  bkAdd.c  bkCache.c  bkCache.h  bkDelete.c  bkError.c  bkError.h  bkExtract.c  bkExtract.h  bkGet.c  bkGet.h  bkInternal.h  bkIoWrappers.c  bkIoWrappers.h  bkLink.c  bkLink.h  bkMangle.c  bkMisc.c  bkPath.c  bkPath.h  bkRead.c  bkRead.h  bkRead7x.c  bkRead7x.h  bkSet.c  bkSort.c  bkTime.c  bkWrite.c  bkWrite.h  bkWrite7x.c
data/: set_default_entry.bat
data/bootloaders/grub2/: grub2Bios.mbr  grub64.efi
data/bootloaders/grub_legasy/: grldr.mbr
data/bootloaders/gummi/efi/grub/android/: grub.cfg
debug/: log.txt  moc_console.cpp  moc_data.cpp  moc_install.cpp  moc_window.cpp  qrc_resource.cpp
log/: log-261117205455.txt  log-261117205814.txt
release/: yourdroid  yourdroid-qt
zlib/: ioapi.c  unzipper.cpp  unzipper.h  zip.c  zip.h  zipper.cpp  zipper.h
